--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Personal Portfolio</title>
     <!-- box icons -->
     <link
@@ -49,19 +52,19 @@
       </div>
 
       <div class="home-img">
-        <img src="./images/personal-portfolio-pic.png" alt="" />
+        <img src="./images/resting_on_rocks.PNG" alt="" />
       </div>
     </section>
 
     <!-- about section design -->
     <section class="about" id="about">
       <div class="about-img">
-        <img src="./images/personal-portfolio-pic.png" alt="" />
+        <img src="./images/Military headshot.png" alt="" />
       </div>
 
       <div class="about-content">
         <h2 class="heading">About <span>Me</span></h2>
-        <h3>Frontend Engineer</h3>
+        <h3>Geospatial Engineer</h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos id
           dolorum est aspernatur recusandae ea voluptatibus odit doloremque
@@ -93,8 +96,8 @@
         </div>
 
         <div class="services-box">
-          <i class="bx bxs-paint"></i>
-          <h3>Graphic Design</h3>
+          <i class='bx bx-shape-square'></i>
+          <h3>Photogrammetry</h3>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum
             illo, eius esse obcaecati sequi earum cumque temporibus ipsam
@@ -104,8 +107,8 @@
         </div>
 
         <div class="services-box">
-          <i class="bx bx-code-block"></i>
-          <h3>Digital Marketing</h3>
+          <i class='bx bxs-map-alt'></i>
+          <h3>Geospatial Analysis</h3>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum
             illo, eius esse obcaecati sequi earum cumque temporibus ipsam
@@ -122,7 +125,7 @@
       <div class="portfolio-container">
 
         <div class="portfolio-box">
-          <img src="./images/portfolio-1.png" alt="" />
+          <img src="./images/Google_Earth_Engine_app.jpg" alt="" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>
@@ -134,7 +137,7 @@
         </div>
 
         <div class="portfolio-box" id="portfolio-2">
-          <img src="./images/portfolio-2.png" alt="" />
+          <img src="./images/Temp_variations.png" alt="" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>
@@ -146,7 +149,7 @@
         </div>
 
         <div class="portfolio-box">
-          <img src="./images/portfolio-3.png" alt="" />
+          <img src="./images/AVG_SST_F.png" alt="" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>
@@ -158,7 +161,7 @@
         </div>
 
         <div class="portfolio-box">
-          <img src="./images/portfolio-4.png" alt="" />
+          <img src="./images/Covid_graphs.JPG" alt="" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>
@@ -170,7 +173,7 @@
         </div>
 
         <div class="portfolio-box">
-          <img src="./images/portfolio-5.png" alt="" />
+          <img src="./images/Low_crime_food insecure.JPG" alt="" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>
@@ -182,7 +185,7 @@
         </div>
 
         <div class="portfolio-box">
-          <img src="./images/portfolio-6.png" alt="" />
+          <img src="./images/High_crime_food_insecure.JPG" alt="" />
           <div class="portfolio-layer">
             <h4>Web Design</h4>
             <p>
@@ -224,13 +227,77 @@
       </div>
     </footer>
 
-    <!-- scroll reveal -->
-    <script src="https://unpkg.com/scrollreveal"></script>
+    <div class="about-content">
+      <h2 class="heading">About <span>Me</span></h2>
+      <h3>Geospatial Engineer</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos id
+        dolorum est aspernatur recusandae ea voluptatibus odit doloremque
+        voluptatum, dolorem voluptas laborum error alias veniam reiciendis
+        esse eum. Ex, tempora minima vero maxime sit, enim beatae consectetur
+        dolor voluptates eos in blanditiis. Id quam dolorem laborum cumque,
+        maxime eos consequatur adipisci quasi voluptatem, libero eaque maiores
+        voluptatibus quas mollitia atque iusto, quod aspernatur unde possimus.
+        Eum sint animi recusandae numquam!
+      </p>
+      <a href="#" class="btn">Read More</a>
+    </div>
+  </section>
 
-    <!-- typed js -->
-    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+  <!-- services section design -->
+  <section class="services" id="services">
+    <h2 class="heading">Our <span>Services</span></h2>
 
-    <!-- custom js -->
-    <script src="./js/app.js"></script>
-  </body>
+    <div class="services-container">
+      <div class="services-box">
+        <i class="bx bx-code-alt"></i>
+        <h3>Web Development</h3>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum
+          illo, eius esse obcaecati sequi earum cumque temporibus ipsam
+          molestias quod, asperiores excepturi eligendi eum voluptate!
+        </p>
+        <a href="#" class="btn">Read More</a>
+      </div>
+
+      <div class="services-box">
+        <i class='bx bx-shape-square'></i>
+        <h3>Photogrammetry</h3>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum
+          illo, eius esse obcaecati sequi earum cumque temporibus ipsam
+          molestias quod, asperiores excepturi eligendi eum voluptate!
+        </p>
+        <a href="#" class="btn">Read More</a>
+      </div>
+
+      <div class="services-box">
+        <i class='bx bxs-map-alt'></i>
+        <h3>Geospatial Analysis</h3>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum
+          illo, eius esse obcaecati sequi earum cumque temporibus ipsam
+          molestias quod, asperiores excepturi eligendi eum voluptate!
+        </p>
+        <a href="#" class="btn">Read More</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- portfolio section design -->
+
+  <!-- contact section design -->
+
+  <!-- footer design -->
+
+  <!-- scroll reveal -->
+  <script src="https://unpkg.com/scrollreveal"></script>
+
+  <!-- typed js -->
+  <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+
+  <!-- custom js -->
+  <script src="./js/app.js"></script>
+</body>
+
 </html>
